Upgraded single-spa version

--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "serve": "^11.2.0",
+    "single-spa": "^5.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   },
-  "dependencies": {
-    "single-spa": "^4.4.2"
-  }
+  "dependencies": {}
 }
